--- a/WebApplication5/WebApplication5.csproj
+++ b/WebApplication5/WebApplication5.csproj
@@ -165,6 +165,7 @@
     <Content Include="Views\Home\Upload.cshtml" />
     <Content Include="Views\Home\Crypt.cshtml" />
     <Content Include="Views\Home\Decrypt.cshtml" />
+    <Content Include="Views\Home\Show.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
