--- a/WebApplication5/WebApplication5.csproj
+++ b/WebApplication5/WebApplication5.csproj
@@ -152,6 +152,8 @@
     <Content Include="Images\Encrypt.PNG" />
     <Content Include="Images\false.PNG" />
     <Content Include="Images\ok.PNG" />
+    <Content Include="Images\Александр семенов %281%29.png" />
+    <Content Include="README.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -176,13 +178,10 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Upload.cshtml" />
     <Content Include="Views\Home\Crypt.cshtml" />
     <Content Include="Views\Home\Decrypt.cshtml" />
-    <Content Include="Views\Home\Show.cshtml" />
-    <Content Include="Views\Home\CategoryChosen.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\DeUpload.cshtml" />
     <Content Include="Views\Home\CryptWORD.cshtml" />
