--- a/WebApplication5/WebApplication5.csproj
+++ b/WebApplication5/WebApplication5.csproj
@@ -151,7 +151,11 @@
     <Content Include="Images\empty.PNG" />
     <Content Include="Images\Encrypt.PNG" />
     <Content Include="Images\false.PNG" />
+    <Content Include="Images\lock.PNG" />
+    <Content Include="Images\locked data.PNG" />
     <Content Include="Images\ok.PNG" />
+    <Content Include="Images\ss.PNG" />
+    <Content Include="Images\unlocked data.PNG" />
     <Content Include="Images\Александр семенов %281%29.png" />
     <Content Include="README.txt" />
     <Content Include="Scripts\bootstrap.js" />
